--- a/src/app.scss
+++ b/src/app.scss
@@ -1,34 +1,12 @@
 @import '@fontsource/fira-mono';
-
-/// Generate fluid font style based on screen widths and font sizes
-/// NOTE: do not add any units to the inputs, the mixin will do this for you!
-///
-/// @param  {Number}  $minw - Width font should be at its minimum size in px
-/// @param  {Number}  $maxW - Width font should be at its maximum size in px
-/// @param  {Number}  $fontMin - Minimum font size in rem
-/// @param  {Number}  $fontMax - Maximum font size in rem
-/// @param  {Number}  $fontSize - Root font size in px (1rem in px), default 16
-/// @return {String}  Updated string
-///
-@mixin fluid-type($minW, $maxW, $fontMin, $fontMax, $fontSize: 16) {
-	$minWidth: $minW / $fontSize;
-	$maxWidth: $maxW / $fontSize;
-
-	$slope: ($fontMax - $fontMin) / ($maxWidth - $minWidth);
-	$yIntersect: -$minWidth * $slope + $fontMin;
-
-	$num: calc(#{$yIntersect * 1rem} + #{to-fixed($slope * 100, 3) * 1vw});
-
-	// fallback for browsers that don't support min() or max()
-	font-size: $fontMin * 1rem;
-	// use #{} around m's to not use scss min max functions
-	font-size: #{m}in(#{m}ax($num, $fontMin * 1rem), $fontMax * 1rem);
-}
+@import '@fontsource/open-sans';
+@import '@fontsource/montserrat/variable.css';
 
 :root {
 	// clean this up
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	// cleanup font imports in app html?
+	font-family: 'Open Sans', sans-serif;
+
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
 	--primary-color: #b9c6d2;
@@ -103,21 +81,32 @@ picture {
 }
 
 h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: bold;
+}
+
+h1,
 .h1 {
 	font-size: clamp(2.625rem, 2vw + 1rem, 3.375rem);
-	font-weight: bold;
 }
 
 h2,
 .h2 {
 	font-size: clamp(2.25rem, 10vw, 3rem);
-	font-weight: 500;
 }
 
 h3,
 .h3 {
 	font-size: 1.625rem;
-	font-weight: 500;
 }
 
 h4,
@@ -132,6 +121,8 @@ h5,
 }
 
 p {
+	font-size: 1rem;
+	font-weight: normal;
 }
 
 a {
