--- a/src/app.scss
+++ b/src/app.scss
@@ -2,9 +2,10 @@
 @import '@fontsource/open-sans';
 @import '@fontsource/montserrat/variable.css';
 
+@import 'style/reset.scss';
+
 :root {
 	// clean this up
-	// cleanup font imports in app html?
 	font-family: 'Open Sans', sans-serif;
 
 	--font-mono: 'Fira Mono', monospace;
@@ -40,44 +41,6 @@
 	--sidebar-text: rgba(255, 255, 255, 0.75);
 	--border-w: 0.3rem;
 	--border-r: 0.4rem;
-}
-
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
-/* Set core body defaults */
-body {
-	min-height: 100vh;
-	text-rendering: optimizeSpeed;
-	line-height: 1.5;
-}
-
-/* Make images easier to work with */
-img,
-picture {
-	max-width: 100%;
-	display: block;
-}
-
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-	html:focus-within {
-		scroll-behavior: auto;
-	}
-
-	*,
-	*::before,
-	*::after {
-		animation-duration: 0.01ms !important;
-		animation-iteration-count: 1 !important;
-		transition-duration: 0.01ms !important;
-		scroll-behavior: auto !important;
-	}
 }
 
 h1,
