fix: dead markdown link deployment issue

--- a/src/lib/docs/client/docs.scss
+++ b/src/lib/docs/client/docs.scss
@@ -61,7 +61,7 @@
 	.anchor {
 		position: absolute;
 		display: block;
-		background: url(@sveltejs/site-kit/icons/link.svg) 0 50% no-repeat;
+		// background: url(@sveltejs/site-kit/icons/link.svg) 0 50% no-repeat;
 		background-size: 1em 1em;
 		width: 1.4em;
 		height: 1em;
