--- a/src/lib/docs/client/docs.scss
+++ b/src/lib/docs/client/docs.scss
@@ -83,6 +83,7 @@
 		margin: 0 0.2rem;
 		top: -0.1rem;
 		background: var(--back-api);
+		border-radius: 0.25em;
 	}
 
 	pre code {
@@ -218,7 +219,7 @@
 	color: var(--code-base);
 	border-radius: 0.5rem;
 	margin: 0 0 1rem 0;
-	font-size: 14px;
+	font-size: 0.875rem;
 	max-width: var(--linemax);
 	box-shadow: inset 1px 1px 6px hsla(205.7, 63.6%, 30.8%, 0.06);
 	overflow: hidden;
