feat: udpate sidebar styling

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,7 @@
 
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
+	--black: #000;
 	--primary-color: #b9c6d2;
 	--secondary-color: #d0dde9;
 
@@ -29,7 +30,7 @@
 
 	--side-nav: 2rem;
 
-	--top-offset: 5rem;
+	--top-offset: 6rem;
 
 	--linemax: 42rem;
 
@@ -43,7 +44,7 @@
 	--heading: #222;
 	--text: #444;
 	--second-text: #7b7766;
-	--sidebar-text: var(--pure-white);
+	--sidebar-text: var(--black);
 	--border-w: 0.3rem;
 	--border-r: 0.4rem;
 
