chore: update to latest version of svelte kit

--- a/src/lib/docs/client/docs.scss
+++ b/src/lib/docs/client/docs.scss
@@ -110,6 +110,7 @@
 		}
 
 		a {
+			// TODO change this to a smarter value (so it breaks on /)
 			white-space: pre-wrap;
 			word-wrap:break-word;
 
